# vn-lottery-xsmb

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-update.yml
data/processed/: draws.csv  prizes.csv
data/reports/: days_since_last_seen.csv  frequency.csv  heatmap.csv  histogram.csv  monthly_distribution.csv  moving_average.csv  rolling_frequency.csv
docs/: commit-plan.md  data-schema.md  index.html  maintenance.md  report.md  validation.md
src/vn_lottery_xsmb/: __init__.py
src/vn_lottery_xsmb/analytics/: metrics.py  windows.py
src/vn_lottery_xsmb/cli/: app.py
src/vn_lottery_xsmb/collector/: __init__.py  cache.py  client.py  scheduler.py
src/vn_lottery_xsmb/config/: logging.py  settings.py
src/vn_lottery_xsmb/parser/: html_parser.py  normalizer.py
src/vn_lottery_xsmb/storage/: csv_store.py  models.py  repository.py
tests/contract/: test_cli_analyze.py  test_cli_collect_update.py  test_cli_contract.py  test_cli_report_visualize.py  test_github_actions.py
tests/fixtures/: draw_malformed.html  draw_valid.html  draws_sample.csv  prizes_sample.csv
tests/integration/: test_analyze_outputs.py  test_cli_failures.py  test_collect_history.py  test_publish_artifacts.py  test_run_daily.py
tests/unit/: test_charts.py  test_collector_cache.py  test_collector_client.py  test_csv_store.py  test_dashboard.py  test_html_parser.py  test_metrics_frequency.py  test_metrics_recency_monthly.py  test_metrics_windows.py  test_models.py  test_normalizer.py  test_report.py  test_settings.py
(+9 files in other folders)
