[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-lottery-xsmb"
version = "0.1.0"
description = "Freshly authored CLI platform for collecting, storing, analyzing, and publishing Northern Vietnam lottery result data."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "vn-lottery-xsmb maintainers" }]
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "lxml>=5.2",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "plotly>=5.22",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
vn-lottery = "vn_lottery_xsmb.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["vn_lottery_xsmb"]

[[tool.mypy.overrides]]
module = ["bs4.*", "matplotlib.*", "pandas.*", "plotly.*"]
ignore_missing_imports = true
